Qt Designer: Use multiline validation for dynamic string properties.

Task-number: QTBUG-26394

Change-Id: Idbaa4bad71125b74d8407bb56ee9fdbf83831fe0
Reviewed-by: Jarek Kobus <jaroslaw.kobus@digia.com>
(cherry picked from qttools/a7d61534acdb90b925d7f250665dcd30c3f37668)